objects/Academy_Certification_Student__c.object
<CustomObject>
    <description>Certified Contacts with a link to Certification Programs</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chamilo_Id__c</fullName>
        <description>Id of the User in Chamilo, auto-populated if is a new user</description>
        <externalId>true</externalId>
        <inlineHelpText>Id of the User in Chamilo, auto-populated if is a new user</inlineHelpText>
        <label>Chamilo Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Academy_Certifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GitHub_Username__c</fullName>
        <label>GitHub Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Git_Knowledge_Level__c</fullName>
        <label>Git Knowledge Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>This will be my first contact with Git</fullName>
                </value>
                <value>
                    <fullName>I understand how Git works</fullName>
                </value>
                <value>
                    <fullName>I&apos;ve worked with Git before</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Administrator</fullName>
                </value>
                <value>
                    <fullName>Salesforce Developer</fullName>
                </value>
                <value>
                    <fullName>Salesforce Release Manager</fullName>
                </value>
                <value>
                    <fullName>Salesforce Architect</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <description>Salesforce Org Id used for Academy Activities</description>
        <label>Org Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <label>Student Email</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Student Id to identify student from external platforms</description>
        <externalId>true</externalId>
        <label>Student Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Academy Certification Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Chamilo_Id__c</columns>
        <columns>Student_Id__c</columns>
        <columns>Student_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACS-{000000}</displayFormat>
        <label>Academy Certification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academy Certifications Student</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>